...

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewStudentRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="1dp" />



    <Spinner
            android:id="@+id/spinnerCourse_student"
...
            app:layout_constraintBottom_toBottomOf="@+id/viewStudentRecycler"
            app:layout_constraintEnd_toEndOf="@+id/viewStudentRecycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appBarLayout" />

    <Button
            android:id="@+id/current_students_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pop_up_message_student"
            android:layout_alignStart="@id/pop_up_message_student"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
...
